--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "",
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "postcss-preset-env": "^6.7.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
